const jwtUtils = require('../utils/jwtUtils')
const RefreshToken = require('../models/RefreshToken')
const userServiceClient = require('../clients/userServiceClient') // gRPC client ƒë·ªÉ g·ªçi UserService
const grpc = require('@grpc/grpc-js') // Import grpc

async function Login (call, callback) {
  const { email, password } = call.request
  try {
    // 1. G·ªçi UserService ƒë·ªÉ x√°c th·ª±c user v√† l·∫•y th√¥ng tin
    userServiceClient.AuthenticateUser(
      { email, password },
      async (err, userResponse) => {
        if (err) {
          console.error(
            'Error authenticating user via UserService:',
            err.details || err.message
          )
          // Chuy·ªÉn ƒë·ªïi l·ªói t·ª´ UserService sang l·ªói c·ªßa AuthService
          let statusCode = grpc.status.INTERNAL
          if (
            err.code === grpc.status.NOT_FOUND ||
            err.code === grpc.status.UNAUTHENTICATED
          ) {
            statusCode = grpc.status.UNAUTHENTICATED
          }
          return callback({
            code: statusCode,
            message: err.details || 'Login failed: Could not authenticate user'
          })
        }

        if (!userResponse || !userResponse.id) {
          return callback({
            code: grpc.status.UNAUTHENTICATED,
            message: 'Login failed: Invalid user response from UserService'
          })
        }

        // 2. T·∫°o Access Token v√† Refresh Token
        // Trong Login function
        const accessToken = jwtUtils.generateAccessToken(
          userResponse.id,
          userResponse.role ? [userResponse.role] : ['USER'] // ‚úÖ Pass as array
        )

        console.log('üîç Generated token for user:', {
          userId: userResponse.id,
          role: userResponse.role,
          tokenPreview: accessToken.substring(0, 50) + '...'
        })
        const refreshTokenString = jwtUtils.generateRefreshToken(
          userResponse.id,
          userResponse.role ? [userResponse.role] : ['USER']
        )
        const refreshTokenExpiry = jwtUtils.getRefreshTokenExpiryDate()

        // 3. L∆∞u Refresh Token v√†o DB
        const newRefreshToken = new RefreshToken({
          token: refreshTokenString,
          userId: userResponse.id,
          expiryDate: refreshTokenExpiry
        })
        await newRefreshToken.save()

        callback(null, {
          access_token: accessToken,
          refresh_token: refreshTokenString
        })
      }
    )
  } catch (error) {
    console.error('Login Error in AuthService:', error)
    callback({
      code: grpc.status.INTERNAL,
      message: 'Internal server error during login'
    })
  }
}

async function Register (call, callback) {
  const { full_name, email, password, role } = call.request
  try {
    // 1. G·ªçi UserService ƒë·ªÉ t·∫°o user m·ªõi
    // L∆∞u √Ω: CreateUserRequest c·ªßa UserService c√≥ th·ªÉ c·∫ßn nhi·ªÅu tr∆∞·ªùng h∆°n
    // AuthService.RegisterRequest ch·ªâ c√≥ nh·ªØng tr∆∞·ªùng c∆° b·∫£n.
    console.log('Registering user:', { full_name, email, role })
    const createUserRequest = {
      full_name,
      email,
      password,
      role: role || 'USER' // M·∫∑c ƒë·ªãnh l√† USER n·∫øu kh√¥ng cung c·∫•p
      // C√°c tr∆∞·ªùng kh√°c nh∆∞ wallet_address, phone_number, avatar_cid s·∫Ω l√† default/empty
    }

    userServiceClient.CreateUser(
      createUserRequest,
      async (err, userResponse) => {
        if (err) {
          console.error(
            'Error creating user via UserService:',
            err.details || err.message
          )
          let statusCode = grpc.status.INTERNAL
          if (
            err.code === grpc.status.ALREADY_EXISTS ||
            err.code === grpc.status.INVALID_ARGUMENT
          ) {
            statusCode = err.code
          }
          return callback({
            code: statusCode,
            message: err.details || 'Registration failed: Could not create user'
          })
        }

        if (!userResponse || !userResponse.id) {
          return callback({
            code: grpc.status.INTERNAL,
            message:
              'Registration failed: Invalid user response from UserService'
          })
        }

        // 2. T·∫°o Access Token v√† Refresh Token
        const accessToken = jwtUtils.generateAccessToken(
          userResponse.id,
          userResponse.role ? [userResponse.role] : ['USER']
        )
        const refreshTokenString = jwtUtils.generateRefreshToken(
          userResponse.id,
          userResponse.role ? [userResponse.role] : ['USER']
        )
        const refreshTokenExpiry = jwtUtils.getRefreshTokenExpiryDate()

        // 3. L∆∞u Refresh Token v√†o DB
        const newRefreshToken = new RefreshToken({
          token: refreshTokenString,
          userId: userResponse.id,
          expiryDate: refreshTokenExpiry
        })
        await newRefreshToken.save()

        callback(null, {
          access_token: accessToken,
          refresh_token: refreshTokenString
          // c√≥ th·ªÉ tr·∫£ v·ªÅ user_id ho·∫∑c th√¥ng tin user n·∫øu c·∫ßn
        })
      }
    )
  } catch (error) {
    console.error('Register Error in AuthService:', error)
    callback({
      code: grpc.status.INTERNAL,
      message: 'Internal server error during registration'
    })
  }
}

// ƒê·ªïi t√™n h√†m n√†y
async function handleRefreshToken (call, callback) {
  // <<< S·ª¨A T√äN H√ÄM ·ªû ƒê√ÇY
  const { refresh_token } = call.request
  try {
    const storedToken = await RefreshToken.findOne({ token: refresh_token })

    if (!storedToken) {
      return callback({
        code: grpc.status.UNAUTHENTICATED,
        message: 'Invalid refresh token'
      })
    }
    if (storedToken.expiryDate.getTime() < Date.now()) {
      await RefreshToken.deleteOne({ _id: storedToken._id })
      return callback({
        code: grpc.status.UNAUTHENTICATED,
        message: 'Refresh token expired'
      })
    }

    const decoded = jwtUtils.verifyToken(refresh_token)
    if (
      !decoded ||
      decoded.userId !== storedToken.userId ||
      decoded.type !== 'refresh'
    ) {
      return callback({
        code: grpc.status.UNAUTHENTICATED,
        message: 'Invalid refresh token data'
      })
    }

    const newAccessToken = jwtUtils.generateAccessToken(
      decoded.userId,
      decoded.roles
    )

    callback(null, {
      access_token: newAccessToken,
      refresh_token: refresh_token
    })
  } catch (error) {
    console.error('RefreshToken Handler Error:', error) // S·ª≠a t√™n log cho nh·∫•t qu√°n
    callback({ code: grpc.status.INTERNAL, message: 'Internal server error' })
  }
}

module.exports = {
  Login,
  RefreshToken: handleRefreshToken, // <<< S·ª¨A ·ªû ƒê√ÇY KHI EXPORT
  Register
}
